docs/pages/versions/v53.0.0/sdk/imagemanipulator.mdx
---
title: ImageManipulator
description: 一个为本地文件系统上的图像处理提供 API 的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-53/packages/expo-image-manipulator'
packageName: 'expo-image-manipulator'
iconUrl: '/static/images/packages/expo-image-manipulator.png'
platforms: ['android', 'ios', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { SnackInline } from '~/ui/components/Snippet';

`expo-image-manipulator` 提供了一个用于修改存储在本地文件系统中的图像的 API。

## 安装

<APIInstallSection />

## 用法

这将首先将图像顺时针旋转 90 度，然后将旋转后的图像垂直翻转，并将其保存为 PNG。

<SnackInline
label='Basic ImageManipulator 用法'
files={{
    'assets/snack-icon.png': 'https://snack-code-uploads.s3.us-west-1.amazonaws.com/~asset/2f7d32b1787708aba49b3586082d327b'
  }}
dependencies={['expo-asset', 'expo-image-manipulator']}>

```jsx
import { useState } from 'react';
import { Button, Image, StyleSheet, View } from 'react-native';
import { Asset } from 'expo-asset';
import { FlipType, SaveFormat, useImageManipulator } from 'expo-image-manipulator';

const IMAGE = Asset.fromModule(require('./assets/snack-icon.png'));

export default function App() {
  const [image, setImage] = useState(IMAGE);
  const context = useImageManipulator(IMAGE.uri);

  const rotate90andFlip = async () => {
    context.rotate(90).flip(FlipType.Vertical);
    const image = await context.renderAsync();
    const result = await image.saveAsync({
      format: SaveFormat.PNG,
    });

    setImage(result);
  };

  return (
    <View style={styles.container}>
      <View style={styles.imageContainer}>
        <Image source={{ uri: image.localUri || image.uri }} style={styles.image} />
      </View>
      <Button title="旋转并翻转" onPress={rotate90andFlip} />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
  },
  imageContainer: {
    marginVertical: 20,
    alignItems: 'center',
    justifyContent: 'center',
  },
  image: {
    width: 300,
    height: 300,
    resizeMode: 'contain',
  },
});
```

</SnackInline>

## API

```js
import * as ImageManipulator from 'expo-image-manipulator';
```

<APISection packageName="expo-image-manipulator" apiName="ImageManipulator" />
